chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  labels:
    app: myapp
spec:
  selector:
    app: myapp
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
